# cargo-pystubgen

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  stubgen.rs
src/stubgen/: analyzer.rs  generator.rs  locator.rs  parser.rs  typemap.rs
tests/test-project/: pyproject.toml
tests/test-project/libs/lib_a/: pyproject.toml
tests/test-project/libs/lib_b/: pyproject.toml
tests/test-project/libs/lib_c/: Cargo.toml  pyproject.toml
tests/test-project/libs/lib_c/src/: lib.rs
tests/test-project/libs/lib_c/src/lib_c/: __init__.py  _core.pyi
tests/test-project/single_project/: Cargo.toml  pyproject.toml
tests/test-project/single_project/src/: lib.rs  test_libs.rs
tests/test-project/single_project/src/single_project/: __init__.py  _core.pyi
tests/test-project/single_project/src/test_libs/: test_lib_code.rs  test_lib_code_b.rs
