[package]
name = "cargo-pystubgen"
version = "0.1.1"
edition = "2021"
description = "Cargo subcommand for xxxx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GamingChikuwabu/cargo-pystubgen.git"
homepage = "https://github.com/GamingChikuwabu/cargo-pystubgen"
documentation = "https://docs.rs/cargo-pystubgen"
readme = "README.md"

[[bin]]
name = "cargo-pystubgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0"
toml_edit = "0.22.26"

[package.metadata.cargo-subcommand]
name = "pystubgen"
