[project]
name = "single-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KatsuhitoSudare", email = "k.56482525@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
single-project = "single_project:main"

[tool.maturin]
module-name = "single_project._core"
python-packages = ["single_project"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
