[project]
name = "lib-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KatsuhitoSudare", email = "k.56482525@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
